[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "move"
description = "Multi-omics variational autoencoder"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
license = { file="LICENSE" }
dependencies = [
    "hydra-core",
    "numpy",
    "pandas",
    "torch",
    "statsmodels",
    "umap-learn",
    "matplotlib",
    "seaborn"
]
dynamic = ["version"]


[tool.setuptools]
include-package-data = true
license-files = ['LICENSE']

[tool.setuptools.packages.find]
where = ["src"]
include = ["move*"]

[tools.setuptools.dynamic]
version = {attr = "move.__version__"}

[project.scripts]
move-dl = "move.__main__:main"
move-dl-encode = "move.encode_data.__main__:main"
