[metadata]
name = move-dl
description = Multi-omics variational autoencoder
url = https://github.com/RasmussenLab/MOVE
classifiers =
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
license_files = LICENSE
version = attr: move.__version__

[options]
include_package_data = True
install_requires =
    hydra-core
    numpy
    pandas
    torch
    statsmodels
    umap-learn
    matplotlib
    seaborn
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
